--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,5 @@
 .container {
-  margin: 10% auto;
-  padding: 80px 0;
+  padding: 10px 0;
   text-align: center;
 }
 
@@ -12,7 +11,25 @@
 .main {
   flex: 1;
   display: flex;
-  flex-direction: row;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 50px;
+  grid-template-rows: auto;
+}
+
+.one {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row: 1;
+}
+
+.two {
+  grid-column-start: 4;
+  grid-column-end: 6;
+  grid-row: 1;
 }
 
 .title {
@@ -34,7 +51,7 @@
 
 .card {
   height: 100%;
-  width: 40%;
+  width: 100%;
   margin: 0.5rem;
   padding: 1.5rem;
   padding-left: 3rem;
