--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,38 +4,9 @@
 }
 
 .container h1 {
-  font-size: 40px;
-  font-weight: 200;
-}
-
-.main {
-  flex: 1;
-  display: flex;
-}
-
-.wrapper {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  gap: 50px;
-  grid-template-rows: auto;
-}
-
-.one {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row: 1;
-}
-
-.two {
-  grid-column-start: 4;
-  grid-column-end: 6;
-  grid-row: 1;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  margin: 3rem;
+  font-size: 2rem;
+  font-weight: 300;
 }
 
 .container h2 {
@@ -43,10 +14,24 @@
   font-size: 1.25rem;
 }
 
-.div p {
+.container p {
   margin: 0;
   font-size: 1rem;
   line-height: 1.5;
+}
+
+.centerForm {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 8px;
 }
 
 .card {
@@ -60,6 +45,9 @@
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 8px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card h1 {
@@ -75,7 +63,7 @@
 }
 
 .button {
-  margin-top: 2rem;
+  margin: 2rem 1rem 0 0 ;
   appearance: none;
   outline: 0;
   background-color: white;
@@ -92,8 +80,27 @@
   background-color: grey;
 }
 
-.div {
+.comment {
   padding: 1rem 0;
   justify-content: right;
   align-items: center;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 50px;
+  grid-template-rows: auto;
+}
+
+.one {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row: auto;
+}
+
+.two {
+  grid-column-start: 3;
+  grid-column-end: 6;
+  grid-row: auto;
 }
