--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -63,7 +63,7 @@
 }
 
 .button {
-  margin: 2rem 1rem 0 0 ;
+  margin: 2rem 1rem 0 0;
   appearance: none;
   outline: 0;
   background-color: white;
@@ -73,11 +73,20 @@
   border-radius: 3px;
   width: 100px;
   font-size: 18px;
+  cursor: pointer;
 }
 
 .button:disabled {
-  color: grey;
-  background-color: grey;
+  margin: 2rem 1rem 0 0;
+  padding: 10px 15px;
+  appearance: none;
+  outline: 1px solid white;
+  background-color: #50a3a2;
+  color: white;
+  border-radius: 3px;
+  width: 100px;
+  font-size: 18px;
+  cursor: not-allowed;
 }
 
 .comment {
