--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,14 @@ a {
 input:not(:last-child) { 
   margin-bottom: 12px;  
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0 0 0 12px;
+}
+
+li {
+  margin: 0;
+  padding: 6px 0 0 0;
+}
