--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -51,15 +51,17 @@
 }
 
 .card h1 {
-  margin: 0 0 1rem 0;
+  margin: 0 0 2rem 0;
   font-size: 1.5rem;
   font-weight: 200;
 }
 
 .card p {
-  margin: 0;
   font-size: 1rem;
+  font-weight: 400;
   line-height: 1.5;
+  padding: 0;
+  margin: 18px 0 0 0;
 }
 
 .button {
